--- a/assets/sytle.css
+++ b/assets/sytle.css
@@ -1,30 +1,64 @@
 body {
     font-family: Arial, sans-serif;
+    font-size: 25;
+    background-color: rgb(67, 6, 51);
 }
 
 h1 {
-    color: aliceblue;
+    color: rgb(20, 10, 1);
     text-align: center;
     align-items: end;
     border: 2px solid black;
-    background: rgb(11, 111, 192);
+    background: rgb(192, 108, 11);
     padding: 10px;
     text-align: center;
+    font-family: 'Creepster';
+    letter-spacing: 2px;
+}
+
+h2 {
+    color: rgb(20, 10, 1);
+    text-align: center;
+    align-items: end;
+    border: 2px solid black;
+    background: rgb(192, 108, 11);
+    padding: 10px;
+    text-align: center;
+    font-family: 'Creepster';
+    letter-spacing: 2px;
+}
+
+h3 {
+    color: rgb(20, 10, 1);    
+    text-align: center;
+    font-family: 'Creepster';
+    letter-spacing: 2px;
+}
+
+#todayIcon{
+    width: 50px;
+
 }
 
 #search-container {
     text-align: left;
-    margin-left: 10px;
+    border: 2px solid black;
+    background: rgb(192, 108, 11);
+    width: 18%;
+    height: auto;
+    float: left;
+    margin-left: 25px;
 }
 
 #city-input {
-    padding: 5px;
+    padding: 5px;    
+    border: 2px solid black;
 }
 
 #search-button {
     padding: 5px 10px;
-    background-color: #007BFF;
-    color: white;
+    background-color: rgb(20, 10, 1);;
+    color: rgb(192, 108, 11);;
     border: none;
     cursor: pointer;
     border-radius: 75%;
@@ -35,13 +69,25 @@ h1 {
 }
 /* im tring to get this to line up and be broken up into their cards */
 .card-5day {
-display: inline-block;
-width: 100%;
-height: 100px;
-padding: 5px;
-border: 1px solid blue;
+    display: inline-block;
+    width: 17.5%;
+    height: 135px;
+    padding: 5px 5px 5px 5px;
+    border: 2px solid black;
+    background: rgb(192, 108, 11);
+    justify-content: center;
+    
 }
+.cards{
+    margin-left: 50px;
+}
+.card-today{    
+    text-align: center;
+    border: 2px solid black;
+    background: rgb(192, 108, 11);
+    width: 75%;
+    overflow: hidden;
+    margin-left: 325px;
 
-.card-today{
-    align-items: center;
+
 }
